2017-01-31  Jean-Louis Martineau <JMartineau@carbonite.com>
	* NEWS, ReleaseNotes: 3.4.2

2017-01-30  Jean-Louis Martineau <JMartineau@carbonite.com>
	Patch by Jason L Tibbitts III
	* server-src/amcheck.c: Remove spurious printf

2017-01-30  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/krb5-security.c (krb5_accept): Check result of setreuid

2017-01-24  Jean-Louis Martineau <JMartineau@carbonite.com>
	* application-src/ambsdtar.c: Add a SPARSE property, default to YES
	* man/xml-source/ambsdtar.8.xml: Document it.

2017-01-20  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Report/human.pm: Fix output

2017-01-19  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Script_App.pm: Use config_init_with_global

2017-01-18  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/amgetconf.pl: Add build.amperldir
	* perl/Amanda/Paths.pm.in: Export $amperldir

2017-01-18  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/ammessage.c: Add storage to message
	* server-src/amtape.pl: Use storage AUTOLABEL
	* server-src/amcheck-device.pl: Use storage AUTOLABEL
	* server-src/amcheck.c: Use storage RUNTAPES and policy
	  retention-tapes
	* server-src/driverio.c: Use storage tapetype

2017-01-18  Jean-Louis Martineau <JMartineau@carbonite.com>
	* packaging/deb/amanda-backup-client.dirs,
	  packaging/deb/amanda-backup-client.install,
	  packaging/deb/amanda-backup-server.install:
	  s#usr/libexec/amanda#usr/lib/x86_64-linux-gnu/amanda#
	* packaging/deb/rules:
	  Set LIBDIR to $(PREFIX)/lib/$(triplet) on x86_64-linux-gnu
	  Set LIBEXECDIR to $(LIBDIR)

2017-01-17  Jean-Louis Martineau <JMartineau@carbonite.com>
	* device-src/s3.c: Fix for '/' in prefix, fix for port in S3-HOST

2017-01-17  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/dumper.c (startup_dump): Fix reversed test

2017-01-17  Jean-Louis Martineau <JMartineau@carbonite.com>
	Patch by Jason L Tibbitts <tibbs@math.uh.edu>